# pdf-processor

./: Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: s3_inventory.csv
infra/: task-definition.json
resources/: jsonl_redrive.json  ocr_redrive.json  parquet_redrive.json  pdf_redrive.json
src/pdf_processor/: .env  .env.localstack  .env.production  aws_clients.py  config.py  enqueue_from_s3_inventory.py  logger.py  manifest.py  processor.py  utils.py  worker.py
